--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html ng-app="desafio">
 <meta charset="utf-8">
 
-    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <title>Desafio</title>
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/extra.css"/>
+    <title>Favoritar</title>
 
 </head>
 <body ng-controller="Index">
@@ -27,29 +28,62 @@
         <input class="form-control" type="text" ng-model="query" placeholder="Search" style="width: 100%">
 
         <br/>
-        Exibir
-        <div class="btn-group">
-            <button type="button" class="btn btn-default" ng-click="exibir = 10">10</button>
-            <button type="button" class="btn btn-default" ng-click="exibir = 20">20</button>
-            <button type="button" class="btn btn-default" ng-click="exibir = 30">30</button>
-        </div>
-        Posts
+        <div class="row">
 
-        <section style="float: right">
-            <span>Atualização automática:</span>
-            <select ng-model="interval" ng-change="configurarAtualizacaoAutomatica()">
-                <option value="0" selected>Desativado</option>
-                <option value="1000">1 segundo</option>
-                <option value="10000">10 segundos</option>
-                <option value="60000">1 minuto</option>
-                <option value="600000">10 minutos</option>
-                <option value="1800000">30 minutos</option>
-            </select>
-        </section>
+            <div class="col-md-4">
+                Exibir
+
+                <div class="btn-group" data-toggle="buttons">
+                    <label class="btn btn-default" ng-class="{active: exibir == 10}" ng-click="exibir = 10">
+                        <input type="radio"> 10
+                    </label>
+                    <label class="btn btn-default" ng-class="{active: exibir == 20}" ng-click="exibir = 20">
+                        <input type="radio"> 20
+                    </label>
+                    <label class="btn btn-default" ng-class="{active: exibir == 30}" ng-click="exibir = 30">
+                        <input type="radio"> 30
+                    </label>
+                </div>
+            </div>
+
+            <div class="col-md-4 pull-center">
+                Ordenar por
+                <select ng-model="ordenacao">
+                    <option value="" selected>Nada</option>
+                    <option value="data.title">Nome</option>
+                    <option value="data.ups">Ups</option>
+                    <option value="data.downs">Downs</option>
+                </select>
+
+                <div class="btn-group" data-toggle="buttons">
+                    <label class="btn btn-default" ng-class="{active: desc}" ng-click="desc = false">
+                        <input type="radio"> Asc
+                    </label>
+                    <label class="btn btn-default" ng-class="{active: desc}" ng-click="desc = true">
+                        <input type="radio"> Desc
+                    </label>
+                </div>
+            </div>
+
+            Posts
+
+            <section class="pull-right">
+                <span>Atualização automática:</span>
+                <select ng-model="interval" ng-change="configurarAtualizacaoAutomatica()">
+                    <option value="0" selected>Desativado</option>
+                    <option value="1000">1 segundo</option>
+                    <option value="10000">10 segundos</option>
+                    <option value="60000">1 minuto</option>
+                    <option value="600000">10 minutos</option>
+                    <option value="1800000">30 minutos</option>
+                </select>
+            </section>
+        </div>
+
         <hr/>
 
         <div class="row">
-            <div class="col-md-4" ng-repeat="post in posts | filter:query | limitTo:exibir">
+            <div class="col-md-4" ng-repeat="post in posts | filter:query | limitTo:exibir | orderBy: ordenacao:desc">
                 <post-detail post="post" favorito="false"></post-detail>
             </div>
         </div>
@@ -57,24 +91,33 @@
     </div>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.js"></script>
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
     <script src="js/angular.js" type="text/javascript"></script>
 
     <script type="text/ng-template" id="post-detail.html">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">{{post.data.title}}</h3>
+                <h3 class="panel-title text-overflow">{{post.data.title}}</h3>
             </div>
             <div class="panel-body">
-                Ups: {{post.data.ups}}<br/>
-                Downs: {{post.data.downs}}<br/>
-                <button class="btn btn-danger" ng-if="favorito" ng-click="desfavoritar()"><i class="glyphicon glyphicon-trash"></i> Desfavoritar</button>
-                <button class="btn btn-default" ng-if="!favorito" ng-click="favoritar()"><i class="glyphicon glyphicon-star-empty"></i> Favoritar</button>
+                <ul class="media-list">
+                    <li class="media">
+                        <a class="pull-left" href="#">
+                            <img class="media-object" ng-src="{{post.data.thumbnail}}" height="70">
+                        </a>
+                        <div class="media-body">
+                            <i class="glyphicon glyphicon-arrow-up"></i><span class="badge">{{post.data.ups}}</span>
+                            <i class="glyphicon glyphicon-arrow-down"></i><span class="badge">{{post.data.downs}}</span>
+                        </div>
+                    </li>
+                </ul>
+                <h5 class="pull-left">by {{post.data.author}}</h5>
+                <button class="btn btn-danger pull-right btn-xs" ng-if="favorito" ng-click="desfavoritar()" data-toggle="tooltip" title="Desfavoritar"><i class="glyphicon glyphicon-trash"></i></button>
+                <button class="btn btn-default pull-right btn-xs" ng-if="!favorito" ng-click="favoritar()" data-toggle="tooltip" title="Favoritar"><i class="glyphicon glyphicon-star-empty"></i></button>
             </div>
         </div>
     </script>
-
 
 </body>
 </html>
