Corrigindo botão de ordenação

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </select>
 
                 <div class="btn-group" data-toggle="buttons">
-                    <label class="btn btn-default" ng-class="{active: desc}" ng-click="desc = false">
+                    <label class="btn btn-default" ng-class="{active: !desc}" ng-click="desc = false">
                         <input type="radio"> Asc
                     </label>
                     <label class="btn btn-default" ng-class="{active: desc}" ng-click="desc = true">
